@@ -93,7 +93,10 @@ protected:
             if (!result)
                 return;
             ASSERT(result == -1);
-            ASSERT(errno == EAGAIN);
+            if (errno != EAGAIN) {
+                ASSERT_NOT_REACHED(); // In debug mode, this should be a hard failure.
+                break; // In release mode, we should just ignore the error - not returning memory to the OS is better than crashing, especially since we _will_ be able to reuse the memory internally anyway.
+            }
         }
 #else
         m_reservation.decommit(page, pageSize());
